Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31059

Regression: Cannot edit text in Qt Designer's menu bar inline editor

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 5.1.0 Beta 1
    • None
    • Windows, Linux
    • qtbase: 38dc6ccca0d65fa2df4297de4f4e2a90e7ab2fc6

    Description

      Analysis:

      QWidgetWindow::handleKeyEvent() prefers the popup over the keyboard grabber. This triggers in this case since a QMenu is open while the in-line editor (that grabs the keyboard) is active.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes